--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="logo.ico">
-    <title>Document</title>
+    <title>BUTTZ</title>
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
 </head>
